--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ ipython_config.py
 #pdm.toml
 .pdm-python
 .pdm-build/
+*.toml
 
 # pixi
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
