--- a/.gitignore
+++ b/.gitignore
@@ -113,10 +113,8 @@ ipython_config.py
 #   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
 #   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
 #pdm.lock
-#pdm.toml
 .pdm-python
 .pdm-build/
-*.toml
 
 # pixi
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
@@ -201,6 +199,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Streamlit secrets file
+.streamlit/secrets.toml
 
 # Marimo
 marimo/_static/
