--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ ipython_config.py
 #pdm.lock
 .pdm-python
 .pdm-build/
+*.toml
 
 # pixi
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
@@ -199,9 +200,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
-
-# Streamlit secrets file
-.streamlit/secrets.toml
 
 # Marimo
 marimo/_static/
