--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,6 @@ ipython_config.py
 #pdm.lock
 .pdm-python
 .pdm-build/
-*.toml
 
 # pixi
 #   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
@@ -200,6 +199,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Streamlit secrets file
+.streamlit/secrets.toml
 
 # Marimo
 marimo/_static/
